[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://resources/fonts/font_16x.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/fonts/font_48x.tres" type="DynamicFont" id=3]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -20.0
margin_top = -7.0
margin_right = 20.0
margin_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 3 )
text = "Flight for Humankind"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = -22.0
margin_right = 20.5
margin_bottom = 22.0
grow_horizontal = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="VBoxContainer"]
margin_right = 152.0
margin_bottom = 25.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Start"
flat = true

[node name="ButtonFullscreen" type="Button" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 152.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 2 )
text = "Toggle Fullscreen"
flat = true

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 152.0
margin_bottom = 83.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 2 )
text = "Quit"
flat = true

[node name="Version" type="Label" parent="."]
margin_right = 156.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 2 )
text = "Version: Prerelease"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Copyright" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = ExtResource( 2 )
text = "Â© Penguin Psychiatry, 2020
Licensed unter the MIT license"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="VBoxContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonFullscreen" to="." method="_on_ButtonFullscreen_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
